--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,97 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 /* Common styles */
 @import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #fafafa;
+    color: #212121;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+  }
+  ul,
+  ol {
+      margin-top: 0;
+      margin-bottom: 0;
+      padding-left: 0;
+      list-style-type: none;
+  }
+  
+  .gallery {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+    
+  }
+  
+  .gallery-image {
+    display: block;
+    width: 360px;
+    height: 200px;
+    transform: none;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .gallery-image:hover,
+  .gallery-image:focus,
+  .gallery-image:active {
+  transform: scale(1.04);
+  }
+
+  .feedback-form {
+    width: 408px;
+    height: 296px;
+    margin: 0 auto 50px;
+    padding: 24px;
+    background-color: #fff;
+    border-radius: 5px;
+    color: #2e2f42;;
+  }
+  .feedback-input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+    margin-bottom: 8px;
+    border: 1px solid #808080;
+    border-radius: 4px;
+  }
+  .feedback-textarea {
+    display: block;
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    margin-bottom: 16px;
+    border: 1px solid #808080;
+    border-radius: 4px;
+    resize: none;
+  }
+  .feedback-btn {
+    display: block;
+    width: 95px;
+    height: 40px;
+    padding: 8px 16px;
+    background-color: #4e75ff;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+  }
+  .feedback-btn:hover {
+    background-color: #6c8cff;
+  }
+  .feedback-btn:active {
+    background-color: #6c8cff;
+  }
+  
+ 
