--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,7 +23,11 @@
       padding-left: 0;
       list-style-type: none;
   }
-  
+  .page-nav {
+    display: flex;
+    align-items: center;
+    color: #2e2f42;
+}
   .gallery {
     display: flex;
     gap: 24px;
@@ -44,6 +48,18 @@
   .gallery-image:active {
   transform: scale(1.04);
   }
+
+   .images-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
 
   .feedback-form {
     width: 408px;
@@ -94,4 +110,5 @@
     background-color: #6c8cff;
   }
   
+ 
  
